edit 10-experience page

--- a/public/09-subspecies-services.html
+++ b/public/09-subspecies-services.html
@@ -216,17 +216,17 @@
 								<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
 							</svg>Вернуться к услугам
 						</a>
-						<div class="headerBlock__content headerBlock__content--2">
+						<div class="headerBlock__content headerBlock__content--2" data-aos="fade-up" data-aos-delay="300">
 							<h1>Управление поставщиками</h1>
 							<p>Автоматизация процессов регистрации, квалификации, сегментации, а&nbsp;также контроль эффективности поставщиков. Управление данными о&nbsp;поставщиках, их&nbsp;KPI, финансовой документацией, сертификатами и&nbsp;прочей информацией.</p>
 						</div>
-						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
+						<div class="headerBlock__tags d-none d-md-flex" data-aos="fade-up" data-aos-delay="300"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<section class="sContent section bg-white section section--vh" id="sContent">
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Возможности решения
 					</h3>
 					<ul class="sContent__list">
@@ -238,7 +238,7 @@
 						<li>Автоматизированные уведомления на&nbsp;инструментальной панели и&nbsp;в&nbsp;системах KPI при выявлении выходящих за&nbsp;пределы оценок</li>
 					</ul>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Выгоды для бизнеса
 					</h3>
 					<ul class="sContent__list">
@@ -247,7 +247,7 @@
 						<li>Снижение операционных затрат на процесс около 11%</li>
 					</ul>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Как это работает
 					</h3>
 					<div class="sContent__list-text">Автоматизация на&nbsp;базе продукта SAP ARIBA SLP (Supplier Lifecycle and Performance). Является облачным решением.
@@ -262,7 +262,7 @@
 						<li>Возможность подключения с мобильных устройств</li>
 					</ul>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Преимущества работы с SAPRUN
 					</h3>
 					<ul class="sContent__list">
@@ -270,7 +270,7 @@
 						<li>Использование опыта (ноу-хау) наших предыдущих проектов</li>
 					</ul>
 				</div>
-				<div class="container container--small pb-56">
+				<div class="container container--small pb-56" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Успешные внедрения
 					</h3>
 					<ul class="sContent__list">
@@ -283,7 +283,7 @@
 			<section class="sService sService--2 section bg-white" id="sService">
 				<div class="container container--small">
 					<div class="row">
-						<div class="col-md">
+						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
 								<div class="sService__link sService__link--left d-none d-md-inline-block">
 									<svg class="icon icon-arrow-left-link ">
@@ -301,7 +301,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md">
+						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
 								<div class="sService__link sService__link--right">
 									<svg class="icon icon-arrow-right-link ">
@@ -322,7 +322,7 @@
 			<section class="sService sService--2 section bg-white" id="sService">
 				<div class="container container--small">
 					<div class="row">
-						<div class="col-md">
+						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item sService__item--single" href="#">
 								<div class="sService__link sService__link--single">
 									<svg class="icon icon-arrow-right-link ">
