--- a/public/11-case.html
+++ b/public/11-case.html
@@ -216,22 +216,22 @@
 								<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
 							</svg>Вернуться к проектам
 						</a>
-						<div class="headerBlock__content headerBlock__content--3"><img src="img/svg/Infinbank.svg" alt="" loading="lazy"/>
+						<div class="headerBlock__content headerBlock__content--3" data-aos="fade-up" data-aos-delay="300"><img src="img/svg/Infinbank.svg" alt="" loading="lazy"/>
 							<div class="h6">банки</div>
 							<h1>Программа проектов «Реновация» цифровой трансформации банка InfinBank</h1><a class="btn btn-outline-primary" href="#">Запросить детали проекта</a>
 						</div>
 						<div class="headerBlock__desc">Управление цепочками поставок, Взаимоотношения с клиентами и клиентский опыт
 						</div>
-						<div class="headerBlock__tags d-none d-md-flex"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
+						<div class="headerBlock__tags d-none d-md-flex" data-aos="fade-up" data-aos-delay="300"><a href="#">#жизнь компании</a><a href="#">#Новости команды</a><a href="#">#жизнь компании</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<section class="sContent sContent--4 section bg-white section section--vh" id="sContent">
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h4>Donec pellentesque efficitur dui, id dictum ex aliquam id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a sed est.</h4>
 				</div>
-				<div class="container container--small mb-72">
+				<div class="container container--small mb-72" data-aos="fade-up" data-aos-delay="300">
 					<div class="sContent__row row">
 						<div class="col-md-4">
 							<div class="sContent__item">
@@ -267,7 +267,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Функциональный объем
 					</h3>
 					<ul class="sContent__list">
@@ -278,7 +278,7 @@
 						<li>Детальная отчетность SAP BO Web intelliegence</li>
 					</ul>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Сроки проекта
 					</h3>
 					<div class="sContent__list-text">Март 2017 — Февраль 2018
@@ -286,7 +286,7 @@
 					<ul class="sContent__list">
 					</ul>
 				</div>
-				<div class="container container--small">
+				<div class="container container--small" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="sContent__list-title">Достигнутые результаты
 					</h3>
 					<ul class="sContent__list">
@@ -302,7 +302,7 @@
 			<section class="sService sService--2 section bg-white" id="sService">
 				<div class="container container--small">
 					<div class="row">
-						<div class="col-md">
+						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
 								<div class="sService__link sService__link--left d-none d-md-inline-block">
 									<svg class="icon icon-arrow-left-link ">
@@ -320,7 +320,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md">
+						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
 								<div class="sService__link sService__link--right">
 									<svg class="icon icon-arrow-right-link ">
