--- a/public/13-article.html
+++ b/public/13-article.html
@@ -199,7 +199,7 @@
 			<!-- end top-nav-->
 			<!-- start sContent-->
 			<section class="sContent section bg-white section section--vh" id="sContent">
-				<div class="container container--small text-center mb-56">
+				<div class="container container--small text-center mb-56" data-aos="fade-up" data-aos-delay="300">
 					<a class="sContent__back mb-32" href="#">
 						<svg class="icon icon-chevron-left ">
 							<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
@@ -211,19 +211,19 @@
 					<div class="sContent__wrap"><a href="#">#жизнь компании</a><a href="#">#новости команды</a><a href="#">#жизнь компании</a><a href="#">#новости команды</a>
 					</div>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<p class="h4 mb-32">Donec pellentesque efficitur dui, id&nbsp;dictum ex&nbsp;aliquam&nbsp;id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a&nbsp;sed est.</p>
 					<p class="fw-light mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
-				<div class="container container--large mb-56">
+				<div class="container container--large mb-56" data-aos="fade-up" data-aos-delay="300">
 					<div class="sContent__mediaContent"><img class="object-fit-js" src="img/article-img-1.jpg" alt="" loading="lazy"/>
 					</div>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h2>Fusce sed auctor nibh</h2>
 					<p class="fw-light mb-0">Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<ul class="sContent__default-list">
 						<li>Proin mollis libero quis lacus posuere, sit amet varius nunc fringilla</li>
 						<li>In posuere, augue eget ornare congue, eros ex bibendum
@@ -235,11 +235,11 @@
 						<li>Proin suscipit placerat turpis</li>
 					</ul>
 				</div>
-				<div class="container container--large mb-56">
+				<div class="container container--large mb-56" data-aos="fade-up" data-aos-delay="300">
 					<div class="mediaContent"><img class="object-fit-js" src="img/article-img-2.jpg" alt="" loading="lazy"/>
 					</div><span>Description</span>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h6 class="mb-32">H6 Header two line words description</h6>
 						<div class="sContent__tableWrap">
 							<table>
@@ -274,17 +274,17 @@
 							</table>
 						</div>
 				</div>
-				<div class="container container--large mb-32">
+				<div class="container container--large mb-32" data-aos="fade-up" data-aos-delay="300">
 					<blockquote>
 						<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat. Nam non aliquam magna. Etiam et consectetur purus.</h4>
 						<cite>Алексей Литвин<span>Директор</span></cite>
 					</blockquote>
 				</div>
-				<div class="container container--small mb-32">
+				<div class="container container--small mb-32" data-aos="fade-up" data-aos-delay="300">
 					<h3 class="mb-32">H3 Header two line words description</h3>
 					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<ol class="sContent__num-list">
 						<li>Nam luctus orci non suscipit mollis</li>
 						<li>Proin suscipit placerat turpis, vitae fermentum turpis auctor vel
@@ -296,7 +296,7 @@
 						<li>Quisque aliquet nibh nec egestas faucibus</li>
 					</ol>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<div class="sContent__sliderContainer">
 						<div class="sContent__slider sContent__slider--js swiper">
 							<div class="swiper-wrapper">
@@ -328,12 +328,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<h4 class="mb-32">H4 Header two line words description</h4>
 					<h5>H5 Header two line words description</h5>
 					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
-				<div class="container container--small pb-56">
+				<div class="container container--small pb-56" data-aos="fade-up" data-aos-delay="300">
 					<div class="share-block">
 						<p>Поделиться</p>
 						<div class="soc">
@@ -354,7 +354,7 @@
 			<section class="sService sService--2 section bg-white" id="sService">
 				<div class="container container--small">
 					<div class="row">
-						<div class="col-md">
+						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
 								<div class="sService__link sService__link--left d-none d-md-inline-block">
 									<svg class="icon icon-arrow-left-link ">
@@ -372,7 +372,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-md">
+						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
 							<a class="sService__item" href="#">
 								<div class="sService__link sService__link--right">
 									<svg class="icon icon-arrow-right-link ">
