--- a/public/15-search-result.html
+++ b/public/15-search-result.html
@@ -204,7 +204,7 @@
 				</div>
 				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockSearch-bg-mob.jpg" alt=""/>
 				</div>
-				<div class="container">
+				<div class="container" data-aos="fade-up" data-aos-delay="300">
 					<div class="headerBlock__input-wrap form-group"><input class="headerBlock__input form-control" name="text" type="text" placeholder="Поиск"/><span class="headerBlock__input-title"></span>
 						<svg class="icon icon-search ">
 							<use xlink:href="img/svg/sprite.svg#search"></use>
