--- a/public/10-experience.html
+++ b/public/10-experience.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+		<link href="libs/choices.js/public/assets/styles/choices.min.css" rel="stylesheet"/>
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
@@ -233,30 +234,24 @@
 					<p>Фильтр</p>
 					<div class="category-filter__input-wrap form-group">
 						<label>
-							<select class="category-filter__input form-control">
+							<select class="category-filter__input form-control js-choice">
 								<option>Выберите отрасль</option>
 								<option>Финансы</option>
 								<option>Сеть и управление расходами</option>
 								<option>Управление цепочками поставок</option>
 								<option>Взаимоотношение с клиентами и клиентский опыт</option>
 							</select>
-							<svg class="icon icon-chevron-down ">
-								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-							</svg>
 						</label>
 					</div>
 					<div class="category-filter__input-wrap form-group">
 						<label>
-							<select class="category-filter__input form-control">
+							<select class="category-filter__input form-control js-choice2">
 								<option>Выберите отрасль</option>
 								<option>Финансы</option>
 								<option>Сеть и управление расходами</option>
 								<option>Управление цепочками поставок</option>
 								<option>Взаимоотношение с клиентами и клиентский опыт</option>
 							</select>
-							<svg class="icon icon-chevron-down ">
-								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-							</svg>
 						</label>
 					</div>
 					<a class="category-filter__confrim btn btn-primary" href="#">Применить
@@ -635,10 +630,10 @@
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
+		<script src="libs/choices.js/public/assets/scripts/choices.min.js"> </script>
 		<script src="libs/gsap/ScrollTrigger.min.js"> </script>
 		<script src="libs/gsap/gsap.min.js"> </script>
 		<script src="libs/aos/aos.js"> </script>
-		<script src="libs/chart.js/chart.min.js"> </script>
 		<script src="js/common.js"></script>
 	</body>
 </html>
