--- a/public/10-experience.html
+++ b/public/10-experience.html
@@ -482,6 +482,17 @@
 				</a>
 			</section>
 			<!-- end sExperience-->
+			<script src="libs/choices.js/public/assets/scripts/choices.min.js"> </script>
+			<script>
+				const choices = new Choices('.js-choice', {
+					searchChoices: false,
+					searchEnabled: false,
+				});
+				const choices2 = new Choices('.js-choice2', {
+					searchChoices: false,
+					searchEnabled: false,
+				});
+			</script>
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
@@ -630,7 +641,6 @@
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
-		<script src="libs/choices.js/public/assets/scripts/choices.min.js"> </script>
 		<script src="libs/gsap/ScrollTrigger.min.js"> </script>
 		<script src="libs/gsap/gsap.min.js"> </script>
 		<script src="libs/aos/aos.js"> </script>
