--- a/public/07-service-2.html
+++ b/public/07-service-2.html
@@ -263,10 +263,69 @@
 			<!-- start sResourceBase-->
 			<section class="sResourceBase section bg-dark section section--vh" id="sResourceBase">
 				<div class="container">
-					<div class="section-title text-center">
-						<h2>sResourceBase</h2>
+					<div class="section-title">
+						<h2>Ресурсная база – концепция единого центра разработки клиента</h2>
 					</div>
-					<div class="row"></div>
+					<div class="sResourceBase__list">
+						<div class="sResourceBase__item">
+							<div class="sResourceBase__number">01
+							</div>
+							<div class="sResourceBase__item-info">
+								<div class="sResourceBase__item-title">Регионы присутствия 
+								</div>
+								<div class="sResourceBase__text">Москва, Санкт-Петербург, Пермь, Волгоград, Самара, Старый Оскол, Казань
+								</div>
+							</div>
+						</div>
+						<div class="sResourceBase__item">
+							<div class="sResourceBase__number">02
+							</div>
+							<div class="sResourceBase__item-info">
+								<div class="sResourceBase__item-title">Регионы присутствия 
+								</div>
+								<div class="sResourceBase__text">Компания SAPRUN и&nbsp;её&nbsp;окружение входит в&nbsp;один из&nbsp;крупнейших российских ИТ-холдингов INLINE Technologies Group
+								</div>
+							</div>
+						</div>
+						<div class="sResourceBase__item">
+							<div class="sResourceBase__number">03
+							</div>
+							<div class="sResourceBase__item-info">
+								<div class="sResourceBase__item-title">Корпоративный университет
+								</div>
+								<div class="sResourceBase__text">Ежегодно ряды компании пополняются десятками молодых специалистов&nbsp;&mdash; выпускниками ведущих технических вузов, которые проходят обучение по&nbsp;выбранной специальности. Обучение проводят собственные и&nbsp;приглашенные эксперты
+								</div>
+							</div>
+						</div>
+						<div class="sResourceBase__item">
+							<div class="sResourceBase__number">04
+							</div>
+							<div class="sResourceBase__item-info">
+								<div class="sResourceBase__item-title">Команда
+								</div>
+								<div class="sResourceBase__text">Консолидированная экспертиза&nbsp;&mdash; стабильная и&nbsp;замотивированная команда разработчиков в&nbsp;шаговой доступности с&nbsp;различными знаниями и&nbsp;опытом. Возможность оперативной замены сотрудника в&nbsp;случае форс-мажора.
+								</div>
+							</div>
+						</div>
+						<div class="sResourceBase__item">
+							<div class="sResourceBase__number">05
+							</div>
+							<div class="sResourceBase__item-info">
+								<div class="sResourceBase__item-title">Задачи
+								</div>
+								<div class="sResourceBase__text">
+									<ul>
+										<li>Обеспечить единый подход к&nbsp;разработке</li>
+										<li>Обеспечить высокий уровень доступности специалистов</li>
+										<li>Минимизировать риски сдвига сроков и&nbsp;увеличения бюджета разработок.</li>
+										<li>Обеспечить прозрачность ведения разработок на&nbsp;протяжении всего жизненного цикла продукта</li>
+										<li>Обеспечить контроль качества и&nbsp;повысить отказоустойчивость реализуемых разработок</li>
+										<li>Формировать адекватную команду, соответствующую ожиданиям и&nbsp;потребностям Заказчика</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- end sResourceBase-->
