--- a/public/07-service-2.html
+++ b/public/07-service-2.html
@@ -602,10 +602,77 @@
 			<!-- start sHistory-->
 			<section class="sHistory bg-dark section section--vh" id="sHistory">
 				<div class="container">
-					<div class="section-title text-center">
-						<h2>sHistory</h2>
+					<div class="section-title">
+						<h2>История</h2>
 					</div>
-					<div class="row"></div>
+					<div class="sHistory__wrap">
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">1999 г.
+							</div>
+							<div class="sHistory__item-text">Первый контракт SAP
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2003 г.
+							</div>
+							<div class="sHistory__item-text">Старт направления BI
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2004 г.
+							</div>
+							<div class="sHistory__item-text">Первый сертификат SAP по ABAP разработке
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2006 г.
+							</div>
+							<div class="sHistory__item-text">Реорганизация в ОАО «БК Софт»
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2015 г.
+							</div>
+							<div class="sHistory__item-text">Старт проектов по OpenText
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2012 г.
+							</div>
+							<div class="sHistory__item-text">Старт мобильного направления
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2011 г.
+							</div>
+							<div class="sHistory__item-text">Сертификация по ISO 9001:2008
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2008 г.
+							</div>
+							<div class="sHistory__item-text">Первый международный контракт
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2017 г.
+							</div>
+							<div class="sHistory__item-text">Сертификация по ISO 9001:2015
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2018 г.
+							</div>
+							<div class="sHistory__item-text">Развитие в регионах, старт направлений прикладной и мобильной разработки
+							</div>
+						</div>
+						<div class="sHistory__item">
+							<div class="sHistory__item-year">2020 г.
+							</div>
+							<div class="sHistory__item-text">Слияние с компанией ООО «Сапран Консалтинг», создание Центра прикладной разработки
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- end sHistory-->
