edit 15-search-result and 10-experiance page

--- a/public/15-search-result.html
+++ b/public/15-search-result.html
@@ -218,47 +218,47 @@
 				</div>
 			</div>
 			<!-- start sSearchResult-->
-			<section class="sSearchResult section bg-white" id="sSearchResult">
+			<section class="sSearchResult section bg-white section section--vh" id="sSearchResult">
 				<div class="container tabs">
 					<div class="sSearchResult__slider sSearchResult__slider--js swiper" data-aos="fade-up" data-aos-delay="300">
 						<div class="swiper-wrapper tabs__caption">
-							<div class="sSearchResult__slide swiper-slide tabs__btn active">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn active">
 								<div class="sSearchResult__item">По тегу
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Услуги
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Направления
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Технологии
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Подходы
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Новости
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Публикации
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Мероприятия
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Проекты
 								</div>
 							</div>
-							<div class="sSearchResult__slide swiper-slide tabs__btn">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">Нечего не найдено
 								</div>
 							</div>
@@ -426,7 +426,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="sSearchResult__showMore" href="#">Показать ещё
+						<a class="sSearchResult__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё
 							<svg class="icon icon-chevron-down ">
 								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 							</svg>
@@ -553,7 +553,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="sSearchResult__showMore" href="#">Показать ещё услуги
+						<a class="sSearchResult__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё услуги
 							<svg class="icon icon-chevron-down ">
 								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 							</svg>
@@ -678,7 +678,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="sSearchResult__showMore" href="#">Показать ещё направления
+						<a class="sSearchResult__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё направления
 							<svg class="icon icon-chevron-down ">
 								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 							</svg>
@@ -911,7 +911,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="sSearchResult__showMore" href="#">Показать ещё новости
+						<a class="sSearchResult__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё новости
 							<svg class="icon icon-chevron-down ">
 								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 							</svg>
@@ -1054,7 +1054,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="sSearchResult__showMore" href="#">Показать ещё публикации
+						<a class="sSearchResult__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё публикации
 							<svg class="icon icon-chevron-down ">
 								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 							</svg>
@@ -1213,7 +1213,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="sSearchResult__showMore" href="#">Показать ещё мероприятия
+						<a class="sSearchResult__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё мероприятия
 							<svg class="icon icon-chevron-down ">
 								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 							</svg>
@@ -1356,7 +1356,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="sSearchResult__showMore" href="#">Показать ещё проекты
+						<a class="sSearchResult__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё проекты
 							<svg class="icon icon-chevron-down ">
 								<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 							</svg>
@@ -1517,6 +1517,7 @@
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
+		<script src="libs/choices.js/public/assets/scripts/choices.min.js"> </script>
 		<script src="libs/gsap/ScrollTrigger.min.js"> </script>
 		<script src="libs/gsap/gsap.min.js"> </script>
 		<script src="libs/aos/aos.js"> </script>
