--- a/public/10-experience.html
+++ b/public/10-experience.html
@@ -219,47 +219,44 @@
 			<!-- end headerBlock-->
 			<!-- start sExperience-->
 			<div class="category-filter"> 
-				<div class="category-filter__wrap">
-					<div class="category-filter__icon-wrap">
+				<div class="category-filter__toggle">
+					<div class="category-filter__toggle-inner">
 						<svg class="icon icon-filter ">
 							<use xlink:href="img/svg/sprite.svg#filter"></use>
 						</svg>
+						<div class="category-filter__text">Фильтр
+						</div>
 					</div>
-					<p>Фильтр</p>
 				</div>
 				<div class="category-filter__content">
 					<svg class="icon icon-close ">
 						<use xlink:href="img/svg/sprite.svg#close"></use>
 					</svg>
 					<p>Фильтр</p>
-					<div class="category-filter__input-wrap form-group">
-						<label>
-							<select class="category-filter__input form-control js-choice">
-								<option>Выберите отрасль</option>
-								<option>Финансы</option>
-								<option>Сеть и управление расходами</option>
-								<option>Управление цепочками поставок</option>
-								<option>Взаимоотношение с клиентами и клиентский опыт</option>
-							</select>
-						</label>
-					</div>
-					<div class="category-filter__input-wrap form-group">
-						<label>
-							<select class="category-filter__input form-control js-choice2">
-								<option>Выберите отрасль</option>
-								<option>Финансы</option>
-								<option>Сеть и управление расходами</option>
-								<option>Управление цепочками поставок</option>
-								<option>Взаимоотношение с клиентами и клиентский опыт</option>
-							</select>
-						</label>
+					<div class="category-filter__select-wrap">
+						<select class="custom-select custom-select--js">
+							<option>Выберите отрасль</option>
+							<option>Финансы</option>
+							<option>Сеть и управление расходами</option>
+							<option>Управление цепочками поставок</option>
+							<option>Взаимоотношение с клиентами и клиентский опыт</option>
+						</select>
+						<select class="custom-select custom-select--js">
+							<option>Выберите отрасль</option>
+							<option>Финансы</option>
+							<option>Сеть и управление расходами</option>
+							<option>Управление цепочками поставок</option>
+							<option>Взаимоотношение с клиентами и клиентский опыт</option>
+						</select>
 					</div>
 					<a class="category-filter__confrim btn btn-primary" href="#">Применить
 					</a>
 				</div>
 			</div>
 			<section class="sExperience section" id="sExperience">
-				<div class="sExperience__item" data-aos="fade-up" data-aos-delay="300">
+				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
+					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-1.jpg" alt="" loading="lazy"/>
+					</div>
 					<div class="sExperience__wrap"><img src="img/svg/Infinbank.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Банки
 						</div>
@@ -295,10 +292,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-1.jpg" alt="" loading="lazy"/>
-					</div>
 				</div>
-				<div class="sExperience__item sExperience__item--white sExperience__item--ordered" data-aos="fade-up" data-aos-delay="300">
+				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
+					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-2.jpg" alt="" loading="lazy"/>
+					</div>
 					<div class="sExperience__wrap"><img src="img/svg/transBlack.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Нефть и газ
 						</div>
@@ -328,10 +325,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-2.jpg" alt="" loading="lazy"/>
-					</div>
 				</div>
-				<div class="sExperience__item" data-aos="fade-up" data-aos-delay="300">
+				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
+					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-3.jpg" alt="" loading="lazy"/>
+					</div>
 					<div class="sExperience__wrap"><img src="img/svg/pulkovo-white.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Транспорт и логистика
 						</div>
@@ -361,10 +358,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-3.jpg" alt="" loading="lazy"/>
-					</div>
 				</div>
-				<div class="sExperience__item sExperience__item--white sExperience__item--ordered" data-aos="fade-up" data-aos-delay="300">
+				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
+					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-4.jpg" alt="" loading="lazy"/>
+					</div>
 					<div class="sExperience__wrap"><img src="img/svg/sberbank.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Банки
 						</div>
@@ -394,10 +391,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-4.jpg" alt="" loading="lazy"/>
-					</div>
 				</div>
-				<div class="sExperience__item" data-aos="fade-up" data-aos-delay="300">
+				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
+					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-5.jpg" alt="" loading="lazy"/>
+					</div>
 					<div class="sExperience__wrap"><img src="img/svg/gazprom-white.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Нефть и газ
 						</div>
@@ -433,10 +430,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-5.jpg" alt="" loading="lazy"/>
-					</div>
 				</div>
-				<div class="sExperience__item sExperience__item--white sExperience__item--ordered" data-aos="fade-up" data-aos-delay="300">
+				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
+					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-6.jpg" alt="" loading="lazy"/>
+					</div>
 					<div class="sExperience__wrap"><img src="img/svg/aapoca-white.svg" alt="" loading="lazy"/>
 						<div class="sExperience__uptitle">Энергетика и добыча
 						</div>
@@ -472,27 +469,14 @@
 							</div>
 						</div>
 					</div>
-					<div class="sExperience__img-wrap"><img class="object-fit-js" src="img/sExperience-bg-6.jpg" alt="" loading="lazy"/>
-					</div>
 				</div>
-				<a class="sExperience__showMore" href="#">Показать ещё проекты
+				<a class="sExperience__showMore" href="#" data-aos="fade-up" data-aos-delay="300">Показать ещё проекты
 					<svg class="icon icon-chevron-down ">
 						<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
 					</svg>
 				</a>
 			</section>
 			<!-- end sExperience-->
-			<script src="libs/choices.js/public/assets/scripts/choices.min.js"> </script>
-			<script>
-				const choices = new Choices('.js-choice', {
-					searchChoices: false,
-					searchEnabled: false,
-				});
-				const choices2 = new Choices('.js-choice2', {
-					searchChoices: false,
-					searchEnabled: false,
-				});
-			</script>
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
@@ -641,6 +625,7 @@
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"> </script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
+		<script src="libs/choices.js/public/assets/scripts/choices.min.js"> </script>
 		<script src="libs/gsap/ScrollTrigger.min.js"> </script>
 		<script src="libs/gsap/gsap.min.js"> </script>
 		<script src="libs/aos/aos.js"> </script>
