--- a/public/12-offices.html
+++ b/public/12-offices.html
@@ -218,7 +218,7 @@
 			</div>
 			<!-- end headerBlock-->
 			<section class="sExperience sExperience--map section" id="sExperience">
-				<div class="sExperience__item section section--vh bg-white">
+				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
 					<div class="sExperience__img-wrap">
 						<div class="map" data-center="55.79916256893915, 37.61309849999998" id="map-0"></div>
 					</div>
@@ -232,7 +232,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-dark">
+				<div class="sExperience__item section section--vh bg-dark" data-aos="fade-up" data-aos-delay="300">
 					<div class="sExperience__img-wrap">
 						<div class="map" data-center="59.98682106410957, 30.32125800000001" id="map-1"></div>
 					</div>
@@ -246,7 +246,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="sExperience__item section section--vh bg-white">
+				<div class="sExperience__item section section--vh bg-white" data-aos="fade-up" data-aos-delay="300">
 					<div class="sExperience__img-wrap">
 						<div class="map" data-center="57.98969856659982, 56.20387749999989" id="map-2"></div>
 					</div>
