04-press-center done

--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -220,7 +220,7 @@
 			<!-- start sNews-->
 			<section class="sNews sNews--PressCenter section bg-white section section--vh" id="sNews">
 				<div class="container">
-					<div class="sNews__slider sNews__slider--js swiper sNews sNews--PressCenter__slider--js">
+					<div class="swiper sNews--PressCenter__slider--js">
 						<div class="section-title">
 							<div class="row">
 								<div class="col">
@@ -665,6 +665,253 @@
 				</div>
 			</section>
 			<!-- end sEventsList-->
+			<!-- start sNews-->
+			<section class="sNews sNews--Publication section bg-white section section--vh" id="sNews">
+				<div class="container">
+					<div class="swiper sNews--Publication__slider--js sNews--Publication__slider">
+						<div class="section-title">
+							<div class="row">
+								<div class="col">
+									<h2>Публикации</h2>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-wrapper">
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Июнь 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-1.webp"/><img src="img/@2x/publ-pic-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Август 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-2.webp"/><img src="img/@2x/publ-pic-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Золотая награда SAP QUALITY AWARD 2017
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Май 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-3.webp"/><img src="img/@2x/publ-pic-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">SAPRUN Group представит решение для построения эффективной дистрибуторской сети
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Июнь 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-1.webp"/><img src="img/@2x/publ-pic-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Август 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-2.webp"/><img src="img/@2x/publ-pic-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Золотая награда SAP QUALITY AWARD 2017
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Май 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-3.webp"/><img src="img/@2x/publ-pic-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">SAPRUN Group представит решение для построения эффективной дистрибуторской сети
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Июнь 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-1.webp"/><img src="img/@2x/publ-pic-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Август 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-2.webp"/><img src="img/@2x/publ-pic-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Золотая награда SAP QUALITY AWARD 2017
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Май 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-3.webp"/><img src="img/@2x/publ-pic-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">SAPRUN Group представит решение для построения эффективной дистрибуторской сети
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Июнь 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-1.webp"/><img src="img/@2x/publ-pic-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Август 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-2.webp"/><img src="img/@2x/publ-pic-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Золотая награда SAP QUALITY AWARD 2017
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Май 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-3.webp"/><img src="img/@2x/publ-pic-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">SAPRUN Group представит решение для построения эффективной дистрибуторской сети
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Июнь 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-1.webp"/><img src="img/@2x/publ-pic-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Август 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-2.webp"/><img src="img/@2x/publ-pic-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Золотая награда SAP QUALITY AWARD 2017
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Май 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-3.webp"/><img src="img/@2x/publ-pic-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">SAPRUN Group представит решение для построения эффективной дистрибуторской сети
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Июнь 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-1.webp"/><img src="img/@2x/publ-pic-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Август 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-2.webp"/><img src="img/@2x/publ-pic-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Золотая награда SAP QUALITY AWARD 2017
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Май 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-3.webp"/><img src="img/@2x/publ-pic-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">SAPRUN Group представит решение для построения эффективной дистрибуторской сети
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Июнь 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-1.webp"/><img src="img/@2x/publ-pic-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Сотрудники ИНВИТРО ставят цели и&nbsp;планируют развитие с&nbsp;помощью SAP SuccessFactors
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="publ-item__date">Август 2022
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/webp" srcset="img/@2x/webp/publ-pic-2.webp"/><img src="img/@2x/publ-pic-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<div class="publ-item__caption">Золотая награда SAP QUALITY AWARD 2017
+								</div>
+							</div>
+							<div class="publ-item swiper-slide">
+								<div class="end-news-card">
+									<div class="end-news-card__title">Перейти в раздел новости
+									</div>
+									<svg class="icon icon-arrow-right-link ">
+										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+									</svg>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-scrollbar"></div>
+					</div>
+				</div>
+			</section>
+			<!-- end sNews-->
 			<!-- start sCaptionBlock-->
 			<section class="sCaptionBlock bg-white" id="sCaptionBlock">
 				<!-- picture-->
