--- a/public/08-internship.html
+++ b/public/08-internship.html
@@ -229,7 +229,7 @@
 			<!-- start sNews-->
 			<section class="sNews sNews--PressCenter section bg-white section section--vh" id="sNews">
 				<div class="container">
-					<div class="sNews__slider sNews__slider--js swiper sNews sNews--PressCenter__slider--js">
+					<div class="swiper sNews--PressCenter__slider--js">
 						<div class="section-title">
 							<div class="row">
 								<div class="col">
