--- a/public/08-internship.html
+++ b/public/08-internship.html
@@ -493,13 +493,13 @@
 								</a>
 							</div>
 							<div class="sNews__slide swiper-slide">
-								<div class="end-news-card">
+								<a class="end-news-card" href="#">
 									<div class="end-news-card__title">Перейти в раздел новости
 									</div>
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="swiper-scrollbar"></div>
