--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -484,13 +484,13 @@
 								</a>
 							</div>
 							<div class="sNews__slide swiper-slide">
-								<div class="end-news-card">
+								<a class="end-news-card" href="#">
 									<div class="end-news-card__title">Перейти в раздел новости
 									</div>
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="swiper-scrollbar"></div>
@@ -898,13 +898,13 @@
 								</div>
 							</div>
 							<div class="publ-item swiper-slide">
-								<div class="end-news-card">
+								<a class="end-news-card" href="#">
 									<div class="end-news-card__title">Перейти в раздел новости
 									</div>
 									<svg class="icon icon-arrow-right-link ">
 										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
-								</div>
+								</a>
 							</div>
 						</div>
 						<div class="swiper-scrollbar"></div>
